backend/k8s/ingress/api-gateway-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: api-gateway-ingress
  namespace: bondtradex

spec:
  ingressClassName: nginx

  rules:
    - host: bondtradex.local

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: api-gateway

                port:
                  number: 8080
